--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>4enFila</title>
 
     <link rel="stylesheet" href="css/index.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
@@ -14,11 +14,31 @@
 <!-- asdasds -->
 
 <body>
+    <header class="header">
+        <nav class="navbar-expand-lg fixed-top">
+            <ul class="nav justify-content-center">
+                <li>
+                    <span class="nav-link">
+                        <a href="https://github.com/JuanCruu/TPE-interfaces-4enFila/tree/gh-pages">
+                           Trabajo Practico 2 Intefaces | Alumno Juan Cruz Navarro
+                        </a>
+                    </span>
+                </li>
+            </ul>
+        </nav>
+    </header>
+
     <div class="container">
         <div class="row">
 
-            <h1 class="text-justify">4 en fila</h1>
+
+
+            <div>
+                <h1>4 en fila</h1>
+            </div>
+            <div><button id="reset" class="btn btn-danger">New Game</button></div>
         </div>
+
         <canvas id="canvasGame"></canvas>
 
     </div>
